--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,71 @@
     tools:context=".MainActivity">
 
     <include
-        android:id="@+id/segment"
+        android:id="@+id/segmentTop"
         layout="@layout/segment"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <include
+        android:id="@+id/segmentTopLeft"
+        layout="@layout/segment"
+        android:layout_width="20dp"
+        android:layout_height="0dp"
+        android:layout_marginVertical="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/segmentMiddle"
+        app:layout_constraintStart_toStartOf="@id/segmentTop"
+        app:layout_constraintTop_toBottomOf="@id/segmentTop" />
+
+    <include
+        android:id="@+id/segmentTopRight"
+        layout="@layout/segment"
+        android:layout_width="20dp"
+        android:layout_height="0dp"
+        android:layout_marginVertical="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/segmentMiddle"
+        app:layout_constraintEnd_toEndOf="@id/segmentTop"
+        app:layout_constraintTop_toBottomOf="@id/segmentTop" />
+
+    <include
+        android:id="@+id/segmentMiddle"
+        layout="@layout/segment"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_marginHorizontal="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/segmentBottom"
+        app:layout_constraintTop_toBottomOf="@id/segmentTop" />
+
+    <include
+        android:id="@+id/segmentBottomLeft"
+        layout="@layout/segment"
+        android:layout_width="20dp"
+        android:layout_height="0dp"
+        android:layout_marginVertical="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/segmentBottom"
+        app:layout_constraintStart_toStartOf="@id/segmentMiddle"
+        app:layout_constraintTop_toBottomOf="@id/segmentMiddle" />
+
+    <include
+        android:id="@+id/segmentBottomRight"
+        layout="@layout/segment"
+        android:layout_width="20dp"
+        android:layout_height="0dp"
+        android:layout_marginVertical="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/segmentBottom"
+        app:layout_constraintEnd_toEndOf="@id/segmentMiddle"
+        app:layout_constraintTop_toBottomOf="@id/segmentMiddle" />
+
+    <include
+        android:id="@+id/segmentBottom"
+        layout="@layout/segment"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <Button
         android:id="@+id/button"
@@ -22,6 +81,6 @@
         android:text="Click me"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/segment" />
+        app:layout_constraintTop_toBottomOf="@id/segmentBottom" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
